--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+Version 2.1 Build 003
+    - Fix crash when attempting to play videos that have been removed (i.e. a reddit post)
+    - Added parameter to Twitch parsing to allow for playing a channel when they are broadcasting a playlist.
 Version 2.1 Build 002
     - Temporarily disable DASH parsing on videos with encoded URLs.
     - This means these videos will ALWAYS play in low quality.
@@ -11,5 +14,3 @@ Version 2.1 Build 001
 Version 2.1 Build 000
     - Official release of 2.1.
     - Current functionality seems stable.
-Version 2.0 Build 006
-    - Fixes ANOTHER crash for YouTube music videos.
