--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+Version 2.1 Build 007
+    - Fixed Gfycat links on reddit
 Version 2.1 Build 006
     - Added link on main page to be able to view your 'Liked videos' playlist.
     - Also added preference in the General Settings page to control whether or not this is shown on the homepage.
@@ -8,7 +10,3 @@ Version 2.1 Build 004
 Version 2.1 Build 003
     - Fix crash when attempting to play videos that have been removed (i.e. a reddit post)
     - Added parameter to Twitch parsing to allow for playing a channel when they are broadcasting a playlist.
-Version 2.1 Build 002
-    - Temporarily disable DASH parsing on videos with encoded URLs.
-    - This means these videos will ALWAYS play in low quality.
-    - You should be able to change your video quality preference back to 'No Preference'.
