Fixes bug with live search overriding non-Live search
Would be a non-issue if person didn't switch between Live and non-Live
searches.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+Version 2.1 Build 012
+    - Fixes bug with live search feature.
 Version 2.1 Build 011
     - Fixes Issue #131 - Adds ability to search for live streams.
     - Hit the '*' button to get to the search options dialog when in the Search window.
