--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,7 @@
-Version 2.1 Build 014
-    - Fixes Issue #133 - Failed playback on videos with encoded signatures.
+Version 2.1 Build 015
+    - Fixes Issue #134 - Added indication that the channel is working
+    when a video requires additional processing to play.
+    - "Parsing javascript..." takes the longest out of the whole process.
 Version 2.1 Build 013
     - Adds support for external control via the Roku External Control API.
 Version 2.1 Build 012
@@ -11,5 +13,3 @@ Version 2.1 Build 010
     - Fixed Issue #118 - Fixed videos with encoded signatures playing with DASH.
     - This would be probably noticed in music videos.
     - This means that these videos will now play in HD (720p+)
-Version 2.1 Build 009
-    - Fixed Issue #129 - Failure to handle when statistics object in JSON doesn't exist.
