--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+Version 2.1 Build 017
+    - Fixes Issue #138 - Removes support for Vkontakte and VK.com as the links no longer work on reddit.
 Version 2.1 Build 016
     - Fixes Issue #136 - Fixes Vine.co parsing for reddit.
     - Fixes Issue #135 - Adds support for Streamable.com for reddit.
