--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+Version 2.1 Build 020
+    - Fixes Issue #100 - Adds Month filter to reddit.
 Version 2.1 Build 019
     - Fixes Issue #100 - Adds Month filter to reddit.
 Version 2.1 Build 018
@@ -18,7 +20,3 @@ Version 2.1 Build 012
 Version 2.1 Build 011
     - Fixes Issue #131 - Adds ability to search for live streams.
     - Hit the '*' button to get to the search options dialog when in the Search window.
-Version 2.1 Build 010
-    - Fixed Issue #118 - Fixed videos with encoded signatures playing with DASH.
-    - This would be probably noticed in music videos.
-    - This means that these videos will now play in HD (720p+)
