--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+Version 2.1 Build 021
+    - Fixes Issue #139 - Adds a reddit preference to be able to sort your subreddits when you open the reddit feature.
 Version 2.1 Build 020
     - Catches another case where DASH playback would fail, but re-playing wouldn't fall back to non-DASH.
 Version 2.1 Build 019
@@ -17,6 +19,3 @@ Version 2.1 Build 013
     - Adds support for external control via the Roku External Control API.
 Version 2.1 Build 012
     - Fixes bug with live search feature.
-Version 2.1 Build 011
-    - Fixes Issue #131 - Adds ability to search for live streams.
-    - Hit the '*' button to get to the search options dialog when in the Search window.
