Fixes issue #146 - finds the longest duration available in the info manifest.
Rather than assuming the first hit was valid, loop through all of them
and find the greatest and run with it.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+Version 2.2 Build 006
+    - Fixes a case where a 0 duration video would try to play and immediately stop (Issue #146)
 Version 2.2 Build 005
     - Allows Twitch streams to work again, which fixes issue #143.
 Version 2.2 Build 004
@@ -14,6 +16,3 @@ Version 2.2 Build 002
 Version 2.2 Build 001
     - Fixes issue #142 - Default DASH audio track to the higher quality track.
         - This should get rid of an audio 'crackle' noise.
-Version 2.2 Build 000
-    - Official release of 2.2
-    - Current functionality (except for Twitch) seems stable.
