Addresses issue #125 if it happens again in the future
I think this was an API error at the time, but why not include the code
to test for it in case it happens again

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+Version 2.2 Build 007
+    - Ensure an invalid result from YouTube won't crash the channel.
+        - (Issue #125, thanks to youvegottabecrazy!)
 Version 2.2 Build 006
     - Fixes a case where a 0 duration video would try to play and immediately stop (Issue #146)
 Version 2.2 Build 005
