--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+Version 2.2 Build 011
+    - Added a new setting under General Settings to control the maximum allowed live stream bandwidth.
+    - If you notice any kind of de-sync on live streams (Twitch or YouTube) you can play with this setting to see if it helps.
 Version 2.2 Build 010
     - Fixed a crash if no followed Twitch streams are live.
 Version 2.2 Build 009
