Cleaning up the Twitch feature a little bit.
The preview images should load better since they're sized to fit the
poster screen preview images.
I also added some images for the Twitch feature so there aren't odd
letterbox issues.
The Twitch stream list now also uses larger images for the focused
stream (arc vs. flat)

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+Version 2.2 Build 013
+    - Cleaning up Twitch displays.
+    - Version 2.3 candidate build.
 Version 2.2 Build 012
     - Fixes crash on music videos.
 Version 2.2 Build 011
