--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+Version 2.3 Build 000
+    - Official release of 2.3.
 Version 2.2 Build 013
     - Cleaning up Twitch displays.
     - Version 2.3 candidate build.
