--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+Version 2.3 Build 010
+    - Adds support for v.redd.it videos on the reddit component.
 Version 2.3 Build 009
     - Fix Streamable playback.
     - Changed Twitch component so stream descriptions are visible.
@@ -18,5 +20,3 @@ Version 2.3 Build 004
     - This disables some features that are not supported on the Roku 1.
     - Some dialogs have too much text if this is enabled.
     - Addresses issue #157.
-Version 2.3 Build 003
-    - Attempts to fix compilation issues on Roku 1, fixing Issue #157.
