Fixes Vevo and live stream playback.
Regular expression updates.
Thanks bombmars on reddit for the Vevo regex quick fix!

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,9 @@
+Version 2.3 Build 013
+    - Fixes Vevo playback (thanks bombmars!)
+    - Fixes live stream playback
+    - Notice: Do not expect further updates, as the channel will be effectively abandoned due to Roku blocking developer mode access.
 Version 2.3 Build 012
     - Fixes Vevo playback
-    - Notice: Do not expect further updates, as the channel will be effectively abandoned due to Roku blocking developer mode access.
 Version 2.3 Build 011
     - Fixes Vevo playback
 Version 2.3 Build 010
