--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,9 @@
+Version 2.3 Build 015
+    - Fixes Vevo playback
+    - Notice: Do not expect further updates, as the channel will be effectively abandoned due to Roku blocking developer mode access.
 Version 2.3 Build 014
     - Fixes Vevo playback
     - Fixes Twitch playback
-    - Notice: Do not expect further updates, as the channel will be effectively abandoned due to Roku blocking developer mode access.
 Version 2.3 Build 013
     - Fixes Vevo playback (thanks bombmars!)
     - Fixes live stream playback
