--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,8 @@
+Version 2.3 Build 017
+    - Fixes DASH playback again
+    - Notice: Do not expect further updates, as the channel will be effectively abandoned due to Roku blocking developer mode access.
 Version 2.3 Build 016
     - Fixes Vevo playback again
-    - Notice: Do not expect further updates, as the channel will be effectively abandoned due to Roku blocking developer mode access.
 Version 2.3 Build 015
     - Fixes Vevo playback
 Version 2.3 Build 014
@@ -9,6 +11,4 @@ Version 2.3 Build 014
 Version 2.3 Build 013
     - Fixes Vevo playback (thanks bombmars!)
     - Fixes live stream playback
-Version 2.3 Build 012
-    - Fixes Vevo playback
 
