--- a/changelog.txt
+++ b/changelog.txt
@@ -1,14 +1,11 @@
+Version 2.3 Build 018
+    - Hopefully fixes crashes with videos returning invalid data
+    - Added a dialog to show that the app is doing something, since the process to play a video can take a few seconds
+    - Fixes Twitch.tv playback
+    - Notice: Do not expect further updates, as the channel will be effectively abandoned due to Roku blocking developer mode access.
 Version 2.3 Build 017
     - Fixes DASH playback again
-    - Notice: Do not expect further updates, as the channel will be effectively abandoned due to Roku blocking developer mode access.
 Version 2.3 Build 016
     - Fixes Vevo playback again
 Version 2.3 Build 015
     - Fixes Vevo playback
-Version 2.3 Build 014
-    - Fixes Vevo playback
-    - Fixes Twitch playback
-Version 2.3 Build 013
-    - Fixes Vevo playback (thanks bombmars!)
-    - Fixes live stream playback
-
