Fixes a condition when I assumed the length of an array
Duh.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,10 @@
+Version 2.3 Build 019
+    - Fixes another crash condition
+    - Notice: Do not expect further updates, as the channel will be effectively abandoned due to Roku blocking developer mode access.
 Version 2.3 Build 018
     - Hopefully fixes crashes with videos returning invalid data
     - Added a dialog to show that the app is doing something, since the process to play a video can take a few seconds
     - Fixes Twitch.tv playback
-    - Notice: Do not expect further updates, as the channel will be effectively abandoned due to Roku blocking developer mode access.
 Version 2.3 Build 017
     - Fixes DASH playback again
 Version 2.3 Build 016
