--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+Version 2.3 Build 020
+    - Fixes a playback issue. (thanks /u/bombmars on reddit)
+    - Also removes the Liked Videos button since YouTube has removed this feature.
 Version 2.3 Build 019
     - Fixes another crash condition
     - Notice: Do not expect further updates, as the channel will be effectively abandoned due to Roku blocking developer mode access.
@@ -9,5 +12,3 @@ Version 2.3 Build 017
     - Fixes DASH playback again
 Version 2.3 Build 016
     - Fixes Vevo playback again
-Version 2.3 Build 015
-    - Fixes Vevo playback
